--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "view-ui-plus": "^1.1.0",
         "vue": "^3.2.36",
         "vue-router": "^4.0.15"
     }
