--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "bootstrap": "^5.1.3",
         "datatables.net": "^1.12.1",
         "datatables.net-dt": "^1.12.1",
         "jquery": "^3.6.0",
