--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.0.24",
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.6.4",
+        "@heroicons/vue": "^1.0.6",
         "bootstrap": "^5.1.3",
         "datatables.net": "^1.12.1",
         "datatables.net-dt": "^1.12.1",
