--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "jquery": "^3.6.0",
         "view-ui-plus": "^1.1.0",
         "vue": "^3.2.36",
-        "vue-router": "^4.0.15"
+        "vue-router": "^4.0.15",
+        "vuex": "^4.0.2"
     }
 }
