--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "datatables.net-dt": "^1.12.1",
         "jquery": "^3.6.0",
         "js-cookie": "^3.0.1",
+        "laravel-echo": "^1.11.7",
+        "pusher": "^5.1.0-beta",
+        "pusher-js": "^7.1.1-beta",
         "view-ui-plus": "^1.1.0",
         "vue": "^3.2.36",
         "vue-router": "^4.0.15",
