--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "jquery": "^3.6.0",
         "js-cookie": "^3.0.1",
         "laravel-echo": "^1.11.7",
+        "moment": "^2.29.3",
         "pusher": "^5.1.0-beta",
         "pusher-js": "^7.1.1-beta",
         "view-ui-plus": "^1.1.0",
