--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.6.4",
         "@heroicons/vue": "^1.0.6",
+        "async-validator": "^4.2.5",
         "bootstrap": "^5.1.3",
         "datatables.net": "^1.12.1",
         "datatables.net-dt": "^1.12.1",
